--- a/HappinessMetric/Web.config
+++ b/HappinessMetric/Web.config
@@ -20,12 +20,14 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="EnableSimpleMembership" value="false" />
+    <add key="AdminRole" value="jesals,ajaypande"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+    <authentication mode="Windows">
+      <!--<forms loginUrl="~/Account/Login" timeout="2880" />-->
     </authentication>
     <pages>
       <namespaces>
