--- a/HappinessMetric/Web.config
+++ b/HappinessMetric/Web.config
@@ -21,7 +21,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="EnableSimpleMembership" value="false" />
-    <add key="AdminRole" value="jesals,ajaypande"/>
+    <add key="AdminRole" value="jesals,ajaypande,bakkiyalakshmir"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
