--- a/HappinessMetric/HappinessMetric.csproj
+++ b/HappinessMetric/HappinessMetric.csproj
@@ -321,6 +321,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Report\UserReport.cshtml" />
+    <Content Include="Views\Report\ErrorPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
